--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -1,14 +1,13 @@
-repos = [
-	{
+{"repos" : 
+	[{
 		"name": "bcl-test-measures-gem",
 		"org": "BuildingComponentLibrary",
 		"type": "measure",
 		"url": "https://github.com/BuildingComponentLibrary/bcl-test-measures-gem"
-	},
-	{
+	},{
 		"name": "bcl-test-components",
 		"org": "BuildingComponentLibrary",
 		"type": "component",
 		"url": "https://github.com/BuildingComponentLibrary/bcl-test-components"
-	}
-]
+	}]
+}
