Add nrel legacy measure gem first

--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -10,9 +10,9 @@
 		"type": "component",
 		"url": "https://github.com/BuildingComponentLibrary/bcl-test-components"
 	},{
-		"name": "openstudio-common-measures-gem",
-		"org": "NREL",
+		"name": "legacy-NREL-measures-gem",
+		"org": "BuildingComponentLibrary",
 		"type": "measure",
-		"url": "https://github.com/NREL/openstudio-common-measures-gem"
+		"url": "https://github.com/BuildingComponentLibrary/legacy-NREL-measures-gem"
 	}]
 }
