--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -9,5 +9,15 @@
 		"org": "BuildingComponentLibrary",
 		"type": "component",
 		"url": "https://github.com/BuildingComponentLibrary/bcl-test-components"
+	},{
+		"name": "legacy-NREL-measures-gem",
+		"org": "BuildingComponentLibrary",
+		"type": "measure",
+		"url": "https://github.com/BuildingComponentLibrary/legacy-NREL-measures-gem"
+	},{
+		"name": "openstudio-common-measures-gem",
+		"org": "NREL",
+		"type": "measure",
+		"url": "https://github.com/NREL/openstudio-common-measures-gem"
 	}]
 }
