--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -1,18 +1,18 @@
-{"repos" : 
-	[{
-		"name": "bcl-test-measures-gem",
-		"org": "BuildingComponentLibrary",
-		"type": "measure",
-		"url": "https://github.com/BuildingComponentLibrary/bcl-test-measures-gem"
-	},{
-		"name": "bcl-test-components",
-		"org": "BuildingComponentLibrary",
-		"type": "component",
-		"url": "https://github.com/BuildingComponentLibrary/bcl-test-components"
-	},{
-		"name": "legacy-NREL-measures-gem",
-		"org": "BuildingComponentLibrary",
-		"type": "measure",
-		"url": "https://github.com/BuildingComponentLibrary/legacy-NREL-measures-gem"
-	}]
+{
+  "repos": [{
+    "name": "bcl-test-measures-gem",
+    "org": "BuildingComponentLibrary",
+    "type": "measure",
+    "url": "https://github.com/BuildingComponentLibrary/bcl-test-measures-gem"
+  }, {
+    "name": "bcl-test-components",
+    "org": "BuildingComponentLibrary",
+    "type": "component",
+    "url": "https://github.com/BuildingComponentLibrary/bcl-test-components"
+  }, {
+    "name": "legacy-NREL-measures-gem",
+    "org": "BuildingComponentLibrary",
+    "type": "measure",
+    "url": "https://github.com/BuildingComponentLibrary/legacy-NREL-measures-gem"
+  }]
 }
