Add my own gem repo

--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -14,5 +14,10 @@
     "org": "BuildingComponentLibrary",
     "type": "measure",
     "url": "https://github.com/BuildingComponentLibrary/legacy-NREL-measures-gem"
+  }, {
+    "name": "openstudio-effibem-measures-gem",
+    "org": "jmarrec",
+    "type": "measure",
+    "url": "https://github.com/jmarrec/openstudio-effibem-measures-gem"
   }]
 }
