Add Automatic Magic Measures
How are you going to want to organize these? Add to the end?  Alphabetize?  Might want to group by org?

--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -44,5 +44,10 @@
     "org": "NREL",
     "type": "measure",
     "url": "https://github.com/NREL/openstudio-load-flexibility-measures-gem"
+  }, {
+    "name": "Automatic Magic Measures",
+    "org": "automaticmagic",
+    "type": "measure",
+    "url": "github.com/automaticmagic/automaticmagic-measures"
   }]
 }
