--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -55,5 +55,10 @@
     "org": "Ski90Moo",
     "type": "component",
     "url": "https://github.com/Ski90Moo/OpenStudio_Components_HEPLLC"
+  },{
+    "name": "OpenStudio Occupant-related Variability Measures Gem",
+    "org": "LBNL-ETA",
+    "type": "measure",
+    "url": "https://github.com/LBNL-ETA/OpenStudio-Occupant-Variability-Gem/tree/master/lib"
   }]
 }
