--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -56,6 +56,11 @@
     "type": "component",
     "url": "https://github.com/Ski90Moo/OpenStudio_Components_HEPLLC"
   },{
+    "name": "openstudio-measures",
+    "org": "BuildingPerformanceSimulation",
+    "type": "measure",
+    "url": "https://github.com/BuildingPerformanceSimulation/openstudio-measures"
+  },{
     "name": "OpenStudio-Occupant-Variability-Gem",
     "org": "LBNL-ETA",
     "type": "measure",
