--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -55,5 +55,11 @@
     "org": "Ski90Moo",
     "type": "component",
     "url": "https://github.com/Ski90Moo/OpenStudio_Components_HEPLLC"
+  },{
+    "name": "Ski90Moo-OpenStudio_Components_HEPLLC_2
+",
+    "org": "Ski90Moo",
+    "type": "component",
+    "url": "https://github.com/Ski90Moo/Ski90Moo-OpenStudio_Components_HEPLLC_2"
   }]
 }
