--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -56,8 +56,7 @@
     "type": "component",
     "url": "https://github.com/Ski90Moo/OpenStudio_Components_HEPLLC"
   },{
-    "name": "Ski90Moo-OpenStudio_Components_HEPLLC_2
-",
+    "name": "Ski90Moo-OpenStudio_Components_HEPLLC_2",
     "org": "Ski90Moo",
     "type": "component",
     "url": "https://github.com/Ski90Moo/Ski90Moo-OpenStudio_Components_HEPLLC_2"
