--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -65,5 +65,10 @@
     "org": "LBNL-ETA",
     "type": "measure",
     "url": "https://github.com/LBNL-ETA/OpenStudio-Occupant-Variability-Gem"
+  },{
+    "name": "OpenStudio_Measures_HEPLLC",
+    "org": "Ski90Moo",
+    "type": "measure",
+    "url": "https://github.com/Ski90Moo/OpenStudio_Measures_HEPLLC"
   }]
 }
