--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -65,5 +65,10 @@
     "org": "LBNL-ETA",
     "type": "measure",
     "url": "https://github.com/LBNL-ETA/OpenStudio-Occupant-Variability-Gem"
+  },{
+    "name": "bcl_components",
+    "org": "macabilo2",
+    "type": "component",
+    "url": "https://github.com/macabilo2/bcl_components"
   }]
 }
