--- a/bcl_manifest.json
+++ b/bcl_manifest.json
@@ -75,5 +75,10 @@
     "org": "Ski90Moo",
     "type": "measure",
     "url": "https://github.com/Ski90Moo/OpenStudio_Measures_HEPLLC"
+  }{
+    "name": "OpenStudio_Components_HEPLLC_2",
+    "org": "LiliRojas",
+    "type": "component",
+    "url": "https://github.com/LiliRojas/OpenStudio_Components_HEPLLC_2"
   }]
 }
